fixed dark mode

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -685,12 +685,12 @@ body {
   height: 100% !important;
   width: 100vw !important;
   overflow-x: hidden;
-  background-color: black;
+  background-color: white;
 }
 
 html {
   height: max-content !important;
-  background-color: rgba(25, 25, 25, 0.651);;
+  background-color: rgba(255, 255, 255, 0.651);;
 }
 /* @font-face {
     font-family: 'favoritext';
